(common, bundle) Make ObjectUtils java 11 compatible, fix bundle classpath.